--- a/Practica/MainWindow.xaml
+++ b/Practica/MainWindow.xaml
@@ -12,7 +12,7 @@
                 <GridView>
                     <GridViewColumn Header="Id" DisplayMemberBinding="{Binding Id}"/>
                     <GridViewColumn Header="Номер" DisplayMemberBinding="{Binding Number}"/>
-                    <GridViewColumn Header="Название" DisplayMemberBinding="{Binding Name}"/>
+                    <GridViewColumn Header="Модель и марка" DisplayMemberBinding="{Binding Name}"/>
                     <GridViewColumn Header="Возраст" DisplayMemberBinding="{Binding Age}"/>
                     <GridViewColumn Header="Последнее обслуживание" DisplayMemberBinding="{Binding Last_service}"/>
                     <GridViewColumn Header="Местоположение" DisplayMemberBinding="{Binding Location}"/>
@@ -30,9 +30,17 @@
         </ListView>
         <Button Content="Добавить" HorizontalAlignment="Left" Margin="10,15,0,0" VerticalAlignment="Top" Height="26" Width="85" FontSize="16" Click="Button_Click"/>
         <Button Content="Удалить" HorizontalAlignment="Left" Margin="100,15,0,0" VerticalAlignment="Top" Height="26" Width="85" FontSize="16" Click="Button_Click_2"/>
-        <Button Content="Поиск" HorizontalAlignment="Left" Margin="190,15,0,0" VerticalAlignment="Top" Height="26" Width="85" FontSize="16" Click="Button_Click_3"/>
-        <TextBox x:Name="SearchTextBox" HorizontalAlignment="Left" Height="24" Margin="452,17,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="173" FontFamily="Times New Roman" FontSize="18"/>
-        <TextBlock HorizontalAlignment="Left" Margin="452,0,0,0" TextWrapping="Wrap" Text="Поиск" VerticalAlignment="Top" FontSize="16"/>
-        <Button Content="Обновить" HorizontalAlignment="Left" Margin="280,15,0,0" VerticalAlignment="Top" Height="26" Width="85" FontSize="16" Click="Button_Click_1"/>
+        <Button Content="Поиск" HorizontalAlignment="Left" Margin="280,15,0,0" VerticalAlignment="Top" Height="26" Width="85" FontSize="16" Click="Button_Click3"/>
+        <TextBox x:Name="KeywordTextBox" HorizontalAlignment="Left" Height="26" Margin="370,15,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="173" FontFamily="Times New Roman" FontSize="18"/>
+        <TextBlock HorizontalAlignment="Left" Margin="370,-2,0,0" TextWrapping="Wrap" Text="Поиск" VerticalAlignment="Top" FontSize="16"/>
+        <Button Content="Обновить" HorizontalAlignment="Left" Margin="190,15,0,0" VerticalAlignment="Top" Height="26" Width="86" FontSize="16" Click="Button_Click_1"/>
+        <ComboBox x:Name="CategoryComboBox" HorizontalAlignment="Left" Margin="548,15,0,0" VerticalAlignment="Top" Height="26" Width="150" SelectedIndex="0" FontSize="13">
+            <ComboBoxItem Content="Номер"/>
+            <ComboBoxItem Content="Модель и марка"/>
+            <ComboBoxItem Content="Возраст"/>
+            <ComboBoxItem Content="Последнее обслуживание"/>
+            <ComboBoxItem Content="Местоположение"/>
+        </ComboBox>
+        <Button Content="Сбросить" HorizontalAlignment="Left" Margin="712,15,0,0" VerticalAlignment="Top" Height="26" Width="68" FontSize="14" Click="Button_Click_3"/>
     </Grid>
 </Window>
